--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-271.1KB/s(Youtube:不良林), server: zh01lv5au05.feiguayun.xyz, port: 39087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 匈牙利-1.93MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
-  - {name: 🇺🇸 美国-10.98MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-173.5KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.15MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 62500, type: trojan, password: f84ba53b-70bd-480c-8f86-f3c4af26fb24, sni: ocikr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.97MB/s(Youtube:不良林), server: zh01lv3uk01.feiguayun.xyz, port: 50011, type: ss, cipher: aes-256-gcm, password: efafd384-706a-4539-a169-5726c3d51516}
+  - {name: 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-634.7KB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 94ff1ce8-30d2-4b8f-8973-e7046364f260}
   - {name: 伊朗-499.8KB/s(Youtube:不良林), server: 78.157.40.105, port: 14500, type: ss, cipher: aes-256-gcm, password: pZNq5KPuhe9sz1MV}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 匈牙利-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-634.7KB/s(Youtube:不良林)
       - 伊朗-499.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 匈牙利-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-634.7KB/s(Youtube:不良林)
       - 伊朗-499.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 匈牙利-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-634.7KB/s(Youtube:不良林)
       - 伊朗-499.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 匈牙利-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-634.7KB/s(Youtube:不良林)
       - 伊朗-499.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 匈牙利-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-634.7KB/s(Youtube:不良林)
       - 伊朗-499.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 匈牙利-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-634.7KB/s(Youtube:不良林)
       - 伊朗-499.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 匈牙利-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-160.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-634.7KB/s(Youtube:不良林)
       - 伊朗-499.8KB/s(Youtube:不良林)
