--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.97MB/s(Youtube:不良林), server: zh01lv3uk01.feiguayun.xyz, port: 50011, type: ss, cipher: aes-256-gcm, password: efafd384-706a-4539-a169-5726c3d51516}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-566.1KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 08445e6d-0a42-4433-8565-2e4b7de180ac, sni: hk64.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-445.3KB/s(Youtube:不良林), server: www.fewa.cf, port: 443, type: vmess, uuid: 9fcf1e10-772c-ce80-d51f-62c708333c50, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /paths/, ws-headers: {Host: www.fewa.cf}}
-  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 38.91.101.62, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 94ff1ce8-30d2-4b8f-8973-e7046364f260}
-  - {name: 伊朗-499.8KB/s(Youtube:不良林), server: 78.157.40.105, port: 14500, type: ss, cipher: aes-256-gcm, password: pZNq5KPuhe9sz1MV}
-  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇰🇷 韩国-8.95MB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 5.181.234.254, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇰🇷 韩国-6.15MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 62500, type: trojan, password: f84ba53b-70bd-480c-8f86-f3c4af26fb24, sni: ocikr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇭🇰 香港-3.77MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 08445e6d-0a42-4433-8565-2e4b7de180ac, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-898.8KB/s(Youtube:不良林), server: zh01lv5uk04.feiguayun.xyz, port: 35087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-2.92MB/s(Youtube:不良林), server: zh01lv5ca03.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-13.86MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-21.16MB/s(Youtube:不良林), server: qd.500ml.top, port: 61003, type: trojan, password: e87bbb7f-2601-3097-a667-9bd8efc5a0f7, sni: qd.500ml.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.13MB/s(Youtube:不良林), server: qd.500ml.top, port: 61006, type: trojan, password: e87bbb7f-2601-3097-a667-9bd8efc5a0f7, sni: qd.500ml.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-17.52MB/s(Youtube:不良林), server: qd.500ml.top, port: 61002, type: trojan, password: e87bbb7f-2601-3097-a667-9bd8efc5a0f7, sni: qd.500ml.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-445.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 伊朗-499.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-445.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 伊朗-499.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-445.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 伊朗-499.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-445.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 伊朗-499.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-445.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 伊朗-499.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-445.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 伊朗-499.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-566.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-445.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 伊朗-499.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
