--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 08445e6d-0a42-4433-8565-2e4b7de180ac, sni: hk64.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 台湾-2.41MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: zh01lv5hk06.feiguayun.xyz, port: 31087, type: ss, cipher: aes-256-gcm, password: efafd384-706a-4539-a169-5726c3d51516}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 5.181.234.254, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-17.52MB/s(Youtube:不良林), server: qd.500ml.top, port: 61002, type: trojan, password: e87bbb7f-2601-3097-a667-9bd8efc5a0f7, sni: qd.500ml.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-567.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: 116.129.254.212, port: 48603, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ZEM1dFpTOTJjRzVvWVhR}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: js2.mayiyun.shop, port: 10019, type: ss, cipher: aes-256-gcm, password: 94ff1ce8-30d2-4b8f-8973-e7046364f260}
+  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-19.54MB/s(Youtube:不良林), server: jp5.mayiyun.shop, port: 10014, type: ss, cipher: chacha20-ietf-poly1305, password: 94ff1ce8-30d2-4b8f-8973-e7046364f260}
+  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: zh01lv5in04.feiguayun.xyz, port: 38087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇭🇰 香港-2.18MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇰🇷 韩国-2.00MB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.55MB/s(Youtube:不良林), server: 103.195.4.36, port: 443, type: trojan, password: 563b47e2-1773-40fd-8d93-7d1b22cd20fd, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-7.26MB/s(Youtube:不良林), server: 146.56.96.252, port: 2333, type: ssr, cipher: aes-256-cfb, password: doub.io, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
